# FEUP-COMP

./: .gitignore  README.md  flags.txt  gcc flags.txt  links.txt  nonio requirements.txt  notas.txt
Aula 1/: Calculator.jjt  exemplo.jj
code/: index.html  main.js
project/: auto.jtt  calculator.jj  flags.txt  main.cpp  notas.txt
project/code/: auto.jj  calculator.jtt  main.cpp  makefile
src/: CMakeLists.txt  main.js  resolver.lara  stringFlag.cpp
src/clava/: build.xml  clava-unit  jar.xml  run  run.lara
src/flag DB/java/: .project
src/flag DB/js/: flags.txt  flags2.txt  index.html  main.js  makefile
src/foo/: arguments.properties  foo.cpp
src/js/: main.js
src/nonio/: .gitignore  _temp.clava  run
src/nonio/bundles/compilers/gcc/: flagRecommender.json  mypass.json
src/nonio/examples/flagRecommender/: arguments.properties  flagRecommender.c  flagRecommender_verify.c
src/nonio/examples/myexample2/: _temp.clava  arguments.properties  dse_results.json  foo.c  foo_main.c  instrumentation_results.json  main  main_wtiming.c
src/nonio/examples/myexample2/clava_src/: DseMetricsInstrument.lara  DseMetricsInstrumentAux.lara
src/nonio/examples/myexample2/logs/: DseCompiler.txt
src/nonio/examples/nussinov/: _temp.clava  arguments.properties  run
